# HumanAwareness

./: .gitignore
light_scan_sim/config/: config_scan_left.yaml  config_scan_right.yaml
light_scan_sim/launch/: scan_from_map_people_following.launch
light_scan_sim/src/: light_scan_sim.cpp
mbot_scan_map/: CMakeLists.txt  package.xml
mbot_scan_map/include/mbot_scan_map/: scan_map_node.h
mbot_scan_map/launch/: scan_map.launch
mbot_scan_map/src/: scan_map_node.cpp
mbot_scan_persistence/: CMakeLists.txt  package.xml
mbot_scan_persistence/launch/: scan_persistence.launch  scan_persistence_2.launch
mbot_scan_persistence/scripts/: scan_persistence  scan_time_persistence
mbot_scan_unifier/: CMakeLists.txt  package.xml
mbot_scan_unifier/include/cob_scan_unifier/: scan_unifier_node.h
mbot_scan_unifier/src/: scan_unifier_node.cpp
pedestrian_detector/: CMakeLists.txt  package.xml  setup.py
pedestrian_detector/config/: follower.yaml  follower_params_global_map.yaml  tracker_params.yaml
pedestrian_detector/include/detector/: opencvInterface.hpp
pedestrian_detector/include/follower/: follower.h
pedestrian_detector/launch/: follower_test.launch  kidinsight.launch  laser_persistance.launch  pedestrian_detector.launch  pedestrian_detector_path_target.launch  pedestrian_detector_person_target.launch
pedestrian_detector/scripts/: yolo_converter
pedestrian_detector/src/detector/: colorFeatures.cpp  main.cpp
pedestrian_detector/src/follower/: RamerDouglasPeucker.cpp  follower.cpp  head_pos.cpp
pedestrian_detector/src/tracker/: after.cpp  centralp.cpp
people_follower/: CMakeLists.txt  package.xml
people_follower/config/: follower.yaml
people_follower/include/follower/: follower.h
people_follower/launch/: people_follower.launch
people_follower/src/follower/: follower.cpp
people_follower/src/tracker/: after.cpp
vizzy_msgs/: CMakeLists.txt  package.xml
vizzy_msgs/srv/: ChangeRadius.srv  PersonInSight.srv  StartFollowing.srv
