<?xml version="1.0"?>
<package format="2">
  <name>mbot_scan_map</name>
  <version>0.1.0</version>
  <description>The mbot_scan_map package unifies two or more laser-scans, stores the points in a fixed frame pointcloud in order to act as a volatile map</description>

  <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>

  <license>LGPL</license>

  <author email="enrico.piazza@polimi.it">Enrico Piazza</author>
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

</package>
