<?xml version="1.0"?>
<package>
  <name>people_follower</name>
  <version>0.1.4</version>
  <description>People Follower</description>

  <maintainer email="joao.manuel.avelino@gmail.com">Joao Avelino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>using_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>simple_navigation_goals</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>scout_msgs</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>using_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>simple_navigation_goals</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>scout_msgs</run_depend>

</package>
